tests/deploy_errors/pipeline_bad_with/error.txt
Error: 
   11 | deploy passthrough
   12 | with
   13 |   snot = "snot",
   14 | end;
      | ^^^ Argument `badger` is required, but no defaults are provided in the definition and no final values in the instance
